fix(header): nudge tag label vertical alignment (top 53%)
Made-with: Cursor

--- a/_sass/_components/_header.scss
+++ b/_sass/_components/_header.scss
@@ -95,7 +95,7 @@
 	.tag {
 		position: absolute;
 		width: 100%;
-		top: 50%;
+		top: 53%;
 		left: 50%;
 		transform: translateX(-50%);
 		z-index: 2;
